# gitpulse

./: CONTRIBUTING.md  LICENSE  PROMOTION.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml
gitpulse/: __init__.py  ai_client.py  cli.py  config.py  git_ops.py  hook.py  prompts.py
